--- a/servers.yml
+++ b/servers.yml
@@ -36,10 +36,6 @@ Resources:
         FromPort: 80
         ToPort: 80
         CidrIp: 0.0.0.0/0
-      - IpProtocol: tcp
-        FromPort: 22
-        ToPort: 22
-        CidrIp: 0.0.0.0/0
       SecurityGroupEgress:
       - IpProtocol: tcp
         FromPort: 0
@@ -89,9 +85,9 @@ Resources:
           systemctl start apache2.service
           cd /var/www/html
           aws s3 cp s3://udacity-demo-1/udacity.zip .
-          unzip -o udacity.zip          
+          unzip -o udacity.zip 
+          systemctl restart apache2.service         
       ImageId: ami-090717c950a5c34d3
-      KeyName: that-one
       IamInstanceProfile: !Ref UdagramEC2InstanceProfile
       SecurityGroups:
       - Ref: WebServerSecGroup
