--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0  
 os: linux
 files:
-    - source: ./
+    - source: udacity/
       destination: /var/www/release/
 permissions:
     - object: /var/www/html/
