--- a/serversdemo.yml
+++ b/serversdemo.yml
@@ -88,7 +88,7 @@ Resources:
           apt-get install apache2 -y
           systemctl start apache2.service
           cd /var/www/html
-          aws s3 cp s3://udacity-demo-1/udacity.zip .
+          aws s3 cp s3://yourbucket.zip .
           unzip -o udacity.zip          
       ImageId: ami-090717c950a5c34d3
       KeyName: that-one
