--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
-version: 0.0  
+version: 0.0
 os: linux
 files:
-    - source: udacity/
+    - source: krios/
       destination: /var/www/release/
 permissions:
     - object: /var/www/html/
